add_subdirectory(integration)
add_subdirectory(ovm)
add_subdirectory(fixed_point)
add_subdirectory(interpolation)
add_subdirectory(eigen_test)
add_subdirectory(eigen_solving)
add_subdirectory(xml_reader)
add_subdirectory(json_reader)
add_subdirectory(openmesh_unit_tests)
add_subdirectory(openmesh_io)
add_subdirectory(openmesh_traits)
add_subdirectory(openmesh_traits_extend)
add_subdirectory(pbd_dist)
add_subdirectory(pbd_sim)
add_subdirectory(elastic_hexahedron)
